k8s/manifests/deployment.yml
# write a deployment manifest for the application with go-web-app name
# the deployment should have 2 replicas

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: sivasuribabu/go-web-app:dev
        ports:
        - containerPort: 8080
